# todo_app

./: .gitignore  CMakeLists.txt  README.md  README_SLO.md  build.sh  configure.sh  run.sh  todo.txt
src/: Task.cpp  main.cpp  main.h
src/libs/: CMakeLists.txt
src/libs/internal/: CMakeLists.txt
src/ui/: create_task_window.ui  task_box.ui  todo_app.ui
